Fixed alignment on homepage text

--- a/style.css
+++ b/style.css
@@ -243,6 +243,6 @@ text-align: center;}
 
 .infoText {
 position: static;
-	text-align: center;
+	text-align: justify;
 	font-size: 12pt;
 	padding: 0.25%;}
